--- a/app/code/Magento/Theme/view/frontend/templates/html/topmenu.phtml
+++ b/app/code/Magento/Theme/view/frontend/templates/html/topmenu.phtml
@@ -14,7 +14,7 @@
  * @see \Magento\Theme\Block\Html\Topmenu
  */
 ?>
-<?php $columnsLimit = $block->getColumnsLimit() ?: 0; ?>
+<?php $columnsLimit = $block->getColumnsLimit() ? $block->getColumnsLimit() : 0; ?>
 <?php $_menu = $block->getHtml('level-top', 'submenu', $columnsLimit) ?>
 
 <nav class="navigation" role="navigation">
