MAGETWO-45966:  Create API service for design config

--- a/app/design/adminhtml/Magento/backend/Magento_Backend/web/css/source/module/main/_collapsible-blocks.less
+++ b/app/design/adminhtml/Magento/backend/Magento_Backend/web/css/source/module/main/_collapsible-blocks.less
@@ -166,6 +166,27 @@
         transform: scaleY(1);
         visibility: visible;
     }
+
+    .admin__collapsible-title {
+        font-size: 1.6rem;
+        padding-left: (@collapsible-title-icon__size + 1rem);
+
+        &:before {
+            left: 0;
+            right: auto;
+            top: 2rem;
+        }
+
+        &._loading {
+            .admin__page-nav-item-message-loader {
+                left: 0;
+                right: auto;
+            }
+        }
+    }
+    .admin__collapsible-block-wrapper {
+        margin-left: @collapsible-sub-block__indent;
+    }
 }
 
 .fieldset-wrapper {
@@ -180,24 +201,6 @@
 
             .draggable-handle {
                 top: 2.4rem;
-            }
-        }
-
-        .admin__collapsible-title {
-            font-size: 1.6rem;
-            padding-left: (@collapsible-title-icon__size + 1rem);
-
-            &:before {
-                left: 0;
-                right: auto;
-                top: 2rem;
-            }
-
-            &._loading {
-                .admin__page-nav-item-message-loader {
-                    left: 0;
-                    right: auto;
-                }
             }
         }
     }
