MAGETWO-46195: Category is duplicated on save with new form

--- a/app/code/Magento/Catalog/view/adminhtml/templates/catalog/category/tree.phtml
+++ b/app/code/Magento/Catalog/view/adminhtml/templates/catalog/category/tree.phtml
@@ -407,7 +407,7 @@
                 }
 
                 url += 'parent/' + tree.currentNodeId;
-                updateContent(url);
+                location.href = url;
             }
 
             function categoryMove(obj) {
