--- a/app/design/frontend/Magento/blank/Magento_Braintree/web/css/source/_module.less
+++ b/app/design/frontend/Magento/blank/Magento_Braintree/web/css/source/_module.less
@@ -5,7 +5,7 @@
 
 //
 //  Variables
-//  ---------------------------------------------
+//  _____________________________________________
 
 @braintree-input-border__color: @color-gray76;
 
@@ -18,6 +18,7 @@
 //  _____________________________________________
 
 & when (@media-common = true) {
+    .payment-method-braintreetwo, // ToDo Ui: Remove this selector when Payment Module is fully implemented.
     .payment-method-braintree {
 
         .hosted-date-wrap {
