JS-334: Layout "jumps" on refresh while gallery is loading
- fix for classname

--- a/lib/web/mage/gallery/gallery.less
+++ b/lib/web/mage/gallery/gallery.less
@@ -987,7 +987,7 @@
 }
 
 // Styles for spinner in gallery.
-.fotorama__spinnner {
+.fotorama__spinner {
     display: none;
     width: @fotorama-spinner-size;
     height: @fotorama-spinner-size;
