MAGETWO-46071: Customize Image field

--- a/app/code/Magento/Ui/view/base/web/templates/form/element/preview.html
+++ b/app/code/Magento/Ui/view/base/web/templates/form/element/preview.html
@@ -5,7 +5,7 @@
  */
 -->
 <if args="value">
-    <span text="value"/><br>
+    <img attr="src: value" />
 </if>
 
 <input class="admin__control-text" type="hidden"
