MAGETWO-46071: Customize Image field

--- a/app/code/Magento/Ui/view/base/web/templates/form/element/preview.html
+++ b/app/code/Magento/Ui/view/base/web/templates/form/element/preview.html
@@ -5,7 +5,7 @@
  */
 -->
 <if args="value">
-    <img attr="src: value" />
+    <img attr="src: value" class="small-image-preview v-middle" width="48" />
 </if>
 
 <input class="admin__control-text" type="hidden"
