MAGETWO-46066: Create products grid layout customization in EE with VM features

--- a/app/code/Magento/Catalog/view/adminhtml/templates/catalog/category/edit/assign_products.phtml
+++ b/app/code/Magento/Catalog/view/adminhtml/templates/catalog/category/edit/assign_products.phtml
@@ -19,7 +19,7 @@ $gridJsObject = $blockGrid->getJsObjectName();
         'use strict';
 
         var assignProductsConfig = {
-            "selectedProducts": <?php /* @escapeNotVerified */ echo $block->getProductsJson() ?: '{}'; ?>,
+            "selectedProducts": <?php /* @escapeNotVerified */ echo $block->getProductsJson(); ?>,
             "gridJsObject": <?php /* @escapeNotVerified */ echo $gridJsObject ?: '{}'; ?>
         };
 
