MAGETWO-46353: Create component manager
 - Added validator manager and implemented prototype for 3d secure validation

--- a/app/code/Magento/BraintreeTwo/view/frontend/web/template/payment/form.html
+++ b/app/code/Magento/BraintreeTwo/view/frontend/web/template/payment/form.html
@@ -4,7 +4,7 @@
  * See COPYING.txt for license details.
  */
 -->
-<div class="payment-method" data-bind="css: {'_active': isActive() && scriptLoaded()}">
+<div class="payment-method" data-bind="css: {'_active': isActive()}">
     <div class="payment-method-title field choice">
         <input type="radio"
                name="payment[method]"
