MAGETWO-46662: [UI] Assistance with Accept Credit Card Payments using Braintree for StoreFront and Backend
- Added styles for Validation

--- a/app/design/frontend/Magento/blank/Magento_Braintree/web/css/source/_module.less
+++ b/app/design/frontend/Magento/blank/Magento_Braintree/web/css/source/_module.less
@@ -55,6 +55,7 @@
                 @distance: 50px;
 
                 float: left;
+                margin-bottom: 7px;
                 width: 6rem;
 
                 &:first-of-type {
@@ -80,6 +81,8 @@
         .hosted-error {
             clear: both;
             color: @braintree-error__color;
+            font-size: 1.2rem;
+            margin-top: 7px;
             height: 0;
             opacity: 0;
         }
