--- a/app/code/Magento/BraintreeTwo/view/adminhtml/templates/form/cc.phtml
+++ b/app/code/Magento/BraintreeTwo/view/adminhtml/templates/form/cc.phtml
@@ -39,7 +39,7 @@ $ccType = $block->getInfoData('cc_type');
             <div id="<?php /* @noEscape */ echo $code; ?>_cc_number" class="admin__control-text hosted-control">
                 <span class="icon-type"></span>
             </div>
-            <div class="hosted-error">
+            <div class="hosted-error admin__field-error">
                 <?php echo $block->escapeHtml(__('Please, enter valid Credit Card Number')); ?>
             </div>
         </div>
@@ -57,7 +57,7 @@ $ccType = $block->getInfoData('cc_type');
                 <div id="<?php /* @noEscape */ echo $code; ?>_cc_exp_year"
                      class="admin__control-text hosted-control hosted-date"></div>
 
-                <div class="hosted-error"><?php echo $block->escapeHtml(__('Please, enter valid Expiration Date')); ?></div>
+                <div class="hosted-error admin__field-error"><?php echo $block->escapeHtml(__('Please, enter valid Expiration Date')); ?></div>
             </div>
         </div>
     </div>
@@ -70,7 +70,7 @@ $ccType = $block->getInfoData('cc_type');
                 <div id="<?php /* @noEscape */ echo $code; ?>_cc_cid"
                      class="admin__control-text hosted-control hosted-cid"></div>
 
-                <div class="hosted-error">
+                <div class="hosted-error admin__field-error">
                     <?php echo $block->escapeHtml(__('Please, enter valid Card Verification Number')); ?>
                 </div>
             </div>
