--- a/app/design/adminhtml/Magento/backend/Magento_Braintree/web/css/source/_module.less
+++ b/app/design/adminhtml/Magento/backend/Magento_Braintree/web/css/source/_module.less
@@ -40,6 +40,7 @@
         @distance: 50px;
 
         float: left;
+        margin-bottom: .2rem;
         width: 5rem;
 
         &:first-of-type {
@@ -51,7 +52,7 @@
                 padding-bottom: inherit;
                 padding-top: inherit;
                 position: absolute;
-                right: -@distance / 2;
+                right: -@distance * (2 / 3.5);
                 top: 0;
             }
         }
