JS-356: code refactoring

--- a/lib/web/mage/gallery/gallery.less
+++ b/lib/web/mage/gallery/gallery.less
@@ -891,6 +891,10 @@
                 transition-property: none;
             }
         }
+        iframe {
+            width: calc(~'100% - @{fotorama-arw-size} * 2');
+            left: @fotorama-arw-size;
+        }
     }
 }
 
