--- a/app/design/frontend/Magento/blank/Magento_AdvancedCheckout/web/css/source/_module.less
+++ b/app/design/frontend/Magento/blank/Magento_AdvancedCheckout/web/css/source/_module.less
@@ -123,7 +123,8 @@
                     .lib-button-icon(
                     @_icon-font-content: @icon-remove,
                     @_icon-font-text-hide: true,
-                    @_icon-font-size: 28px
+                    @_icon-font-size: 28px,
+                    @_icon-font-margin: 1px 0 0
                     );
                     .lib-button-reset();
                 }
@@ -139,7 +140,7 @@
                 &.remove {
                     .lib-button-reset();
                     .lib-button-as-link();
-                    margin-top: 4px;
+                    margin-top: 2px;
                 }
             }
         }
