MAGETWO-46196: Category tree edit via drag'n'drop does not work

--- a/app/code/Magento/Catalog/view/adminhtml/templates/catalog/category/edit.phtml
+++ b/app/code/Magento/Catalog/view/adminhtml/templates/catalog/category/edit.phtml
@@ -17,3 +17,10 @@
         <div><?php /* @escapeNotVerified */ echo __('This operation can take a long time'); ?></div>
     </div>
 </div>
+<script type="text/x-magento-init">
+    {
+        "*": {
+            "categoryForm": {}
+        }
+    }
+</script>
