--- a/app/code/Magento/BraintreeTwo/view/frontend/web/template/payment/form.html
+++ b/app/code/Magento/BraintreeTwo/view/frontend/web/template/payment/form.html
@@ -7,9 +7,9 @@
 <div data-bind="attr: {class: 'payment-method payment-method-' + getCode()}, css: {'_active': isActive()}">
     <div class="payment-method-title field choice">
         <input type="radio"
-               name="payment[method]"
-               class="radio"
-               data-bind="attr: {'id': getCode()}, value: getCode(), checked: isChecked, click: selectPaymentMethod, visible: isRadioButtonVisible()"/>
+        name="payment[method]"
+        class="radio"
+        data-bind="attr: {'id': getCode()}, value: getCode(), checked: isChecked, click: selectPaymentMethod, visible: isRadioButtonVisible()"/>
         <label class="label" data-bind="attr: {'for': getCode()}">
             <span data-bind="text: getTitle()"></span>
         </label>
@@ -102,6 +102,17 @@
                                  data-bind="html: getCvvImageHtml()"></div>
                         </div>
                     </div>
+                </div>
+                <!-- /ko -->
+                <!-- ko if: (isVaultEnabled())-->
+                <div class="field-tooltip-content">
+                    <input type="checkbox"
+                           name="vault[is_enabled]"
+                           class="checkbox-inline"
+                           data-bind="attr: {'id': getCode() + '_vault_enabler'}, checked: vaultEnabler.isActivePaymentTokenEnabler"/>
+                    <label class="label" data-bind="attr: {'for': getCode() + '_vault_enabler'}">
+                        <span><!-- ko i18n: 'Save credit card info for future use.'--><!-- /ko --></span>
+                    </label>
                 </div>
                 <!-- /ko -->
             </fieldset>
