MAGETWO-46662: [UI] Assistance with Accept Credit Card Payments using Braintree for StoreFront and Backend
- Refactored
- Corrected Spelling

--- a/app/code/Magento/BraintreeTwo/view/adminhtml/templates/form/cc.phtml
+++ b/app/code/Magento/BraintreeTwo/view/adminhtml/templates/form/cc.phtml
@@ -40,7 +40,7 @@ $ccType = $block->getInfoData('cc_type');
                 <span class="icon-type"></span>
             </div>
             <div class="hosted-error admin__field-error">
-                <?php echo $block->escapeHtml(__('Please, enter valid Credit Card Number')); ?>
+                <?php echo $block->escapeHtml(__('Please enter valid Credit Card Number')); ?>
             </div>
         </div>
     </div>
@@ -57,7 +57,7 @@ $ccType = $block->getInfoData('cc_type');
                 <div id="<?php /* @noEscape */ echo $code; ?>_cc_exp_year"
                      class="admin__control-text hosted-control hosted-date"></div>
 
-                <div class="hosted-error admin__field-error"><?php echo $block->escapeHtml(__('Please, enter valid Expiration Date')); ?></div>
+                <div class="hosted-error admin__field-error"><?php echo $block->escapeHtml(__('Please enter valid Expiration Date')); ?></div>
             </div>
         </div>
     </div>
@@ -71,7 +71,7 @@ $ccType = $block->getInfoData('cc_type');
                      class="admin__control-text hosted-control hosted-cid"></div>
 
                 <div class="hosted-error admin__field-error">
-                    <?php echo $block->escapeHtml(__('Please, enter valid Card Verification Number')); ?>
+                    <?php echo $block->escapeHtml(__('Please enter valid Card Verification Number')); ?>
                 </div>
             </div>
         </div>
