--- a/app/code/Magento/BraintreeTwo/view/frontend/web/template/payment/form.html
+++ b/app/code/Magento/BraintreeTwo/view/frontend/web/template/payment/form.html
@@ -62,7 +62,7 @@
                     </label>
                     <div class="control">
                         <div data-bind="attr: {id: getCode() + '_cc_number'}" class="hosted-control"></div>
-                        <div class="hosted-error"><!-- ko i18n: 'Please, enter valid Credit Card Number'--><!-- /ko --></div>
+                        <div class="hosted-error"><!-- ko i18n: 'Please enter valid Credit Card Number'--><!-- /ko --></div>
                     </div>
                 </div>
                 <div class="field number required">
@@ -77,7 +77,7 @@
                             <div data-bind="attr: {id: getCode() + '_expirationYear'}"
                                  class="hosted-control hosted-date"></div>
 
-                            <div class="hosted-error"><!-- ko i18n: 'Please, enter valid Expiration Date'--><!-- /ko --></div>
+                            <div class="hosted-error"><!-- ko i18n: 'Please enter valid Expiration Date'--><!-- /ko --></div>
                         </div>
                     </div>
                 </div>
@@ -88,7 +88,7 @@
                     </label>
                     <div class="control _with-tooltip">
                         <div data-bind="attr: {id: getCode() + '_cc_cid'}" class="hosted-control hosted-cid"></div>
-                        <div class="hosted-error"><!-- ko i18n: 'Please, enter valid Card Verification Number'--><!-- /ko --></div>
+                        <div class="hosted-error"><!-- ko i18n: 'Please enter valid Card Verification Number'--><!-- /ko --></div>
 
                         <div class="field-tooltip toggle">
                             <span class="field-tooltip-action action-cvv"
