--- a/app/design/adminhtml/Magento/backend/web/css/source/variables/_icons.less
+++ b/app/design/adminhtml/Magento/backend/web/css/source/variables/_icons.less
@@ -74,3 +74,4 @@
 @icon-grid__content: '\e63d';
 @icon-list-menu__content: '\e63e';
 @icon-cart__content: '\e63f';
+@icon-screen__content: '\e640'; // ToDo UI accept theirs when merging with new product page: for this file and for all fonts files - this icon is already included in that font. And remove this comment
