MAGETWO-46078: Fix functional tests from FAT plan
- Added SwitcherElement to work with a new toggle element
- Added FormSections and Section classes for the new unified backend page
- Updated FAT tests for updated category page

--- a/app/design/adminhtml/Magento/backend/web/css/styles-old.less
+++ b/app/design/adminhtml/Magento/backend/web/css/styles-old.less
@@ -2024,8 +2024,7 @@
     }
 
     .switcher input[type="checkbox"] {
-        position: absolute;
-        left: -999em;
+        .lib-visually-hidden();
     }
 
     .switcher-label {
