--- a/app/design/adminhtml/Magento/backend/Magento_Staging/web/css/source/module/_staging-preview.less
+++ b/app/design/adminhtml/Magento/backend/Magento_Staging/web/css/source/module/_staging-preview.less
@@ -269,12 +269,6 @@
         }
     }
 
-    .field-staging_date {
-        .admin__control-text {
-            width: 19rem;
-        }
-    }
-
     .ui-datepicker-trigger {
         &:after {
             color: @staging-preview-form-element-icon__color;
@@ -320,25 +314,27 @@
 //  ---------------------------------------------
 
 .staging-preview-item-content-wrapper {
+    .row-gutter {
+        margin-left: 0;
+        margin-right: 0;
+         > [class*='col-'] {
+             padding-left: 0;
+             padding-right: 0;
+         }
+    }
 
     .view-specific-date {
-        &:after {
-            @width: 95%;
-            border-bottom: 1px solid @staging-preview-table-dark__border-color;
-            content: '';
-            display: block;
-            left: 50%;
-            margin-left: -@width / 2;
-            position: relative;
-            width: @width;
+        .admin__control-text {
+            width: auto;
         }
     }
 
     //  Generic data grid
     .admin__data-grid-outer-wrap {
+        border-top: 1px solid @staging-preview-table-dark__border-color;
         max-height: 400px; // ToDO: Negotiate and determine if should be dynamic by JS.
         overflow-y: auto;
-        padding: 15px;
+        padding: 15px 0 0;
     }
 
     .data-grid {
