MAGETWO-46441: Make ability to insert grid inside form
- very raw: lil'John and robinGood woking

--- a/app/code/Magento/Ui/view/base/web/templates/grid/cells/textEdit.html
+++ b/app/code/Magento/Ui/view/base/web/templates/grid/cells/textEdit.html
@@ -5,5 +5,7 @@
  */
 -->
 <div class="data-grid-cell-content">
-    <input type="text" data-bind="value: $col.getLabel($row())"/>
+    <input type="text" data-bind="value: $col.getLabel($row()), event: { change: function (data, ev) {
+     $col.dataChanged($row(), ev.target.value);
+     }}"/>
 </div>
