JS-335: Refactor gallery to support images replacing by index

--- a/app/code/Magento/ProductVideo/view/frontend/templates/product/view/gallery.phtml
+++ b/app/code/Magento/ProductVideo/view/frontend/templates/product/view/gallery.phtml
@@ -14,8 +14,8 @@
     {
         "[data-gallery-role=gallery-placeholder]": {
             "Magento_ProductVideo/js/fotorama-add-video-events": {
-                "fotoramaVideoData": <?php /* @escapeNotVerified */ echo $block->getMediaGalleryDataJson(); ?>,
-                "fotoramaVideoSettings": <?php /* @escapeNotVerified */ echo $block->getVideoSettingsJson(); ?>
+                "VideoData": <?php /* @escapeNotVerified */ echo $block->getMediaGalleryDataJson(); ?>,
+                "VideoSettings": <?php /* @escapeNotVerified */ echo $block->getVideoSettingsJson(); ?>
             }
         }
     }
