--- a/app/code/Magento/Catalog/view/adminhtml/layout/catalog_category_edit.xml
+++ b/app/code/Magento/Catalog/view/adminhtml/layout/catalog_category_edit.xml
@@ -29,7 +29,7 @@
         </referenceContainer>
         <referenceContainer name="content">
             <uiComponent name="category_form"/>
-            <block class="Magento\Framework\View\Element\Template" name="category.edit" template="Magento_Catalog::catalog/category/edit.phtml"/>
+            <block class="Magento\Catalog\Block\Adminhtml\Category\Edit" name="category.edit" template="Magento_Catalog::catalog/category/edit.phtml" />
         </referenceContainer>
         <referenceContainer name="js">
             <block class="Magento\Framework\View\Element\Template" template="Magento_Catalog::catalog/wysiwyg/js.phtml" name="catalog.wysiwyg.js"/>
