MAGETWO-46726: Slide-out panel contains scroll bars available for bottom layers
- Fixed vertical scroll

--- a/app/design/adminhtml/Magento/backend/web/css/source/components/_modals_extend.less
+++ b/app/design/adminhtml/Magento/backend/web/css/source/components/_modals_extend.less
@@ -159,6 +159,11 @@
     .modal-content-new-attribute {
         overflow: auto;
         -webkit-overflow-scrolling: touch;
+        padding-bottom: 0;
+
+        iframe {
+            margin-bottom: -@indent__m;
+        }
     }
 
     .modal-title {
