--- a/app/code/Magento/Catalog/view/adminhtml/layout/catalog_category_edit.xml
+++ b/app/code/Magento/Catalog/view/adminhtml/layout/catalog_category_edit.xml
@@ -14,15 +14,7 @@
     <body>
         <referenceContainer name="left" htmlClass="admin__scope-old" htmlTag="div" />
         <referenceContainer name="page.main.actions">
-            <block class="Magento\Backend\Block\Store\Switcher" name="category.store.switcher" template="Magento_Backend::store/switcher.phtml">
-                <!--<arguments>-->
-                <!--<argument name="switch_url" xsi:type="url" path="catalog/*/*">-->
-                <!--<param name="_current" xsi:type="boolean">true</param>-->
-                <!--<param name="_query" xsi:type="boolean">false</param>-->
-                <!--<param name="store" xsi:type="null" />-->
-                <!--</argument>-->
-                <!--</arguments>-->
-            </block>
+            <block class="Magento\Backend\Block\Store\Switcher" name="category.store.switcher" template="Magento_Backend::store/switcher.phtml"/>
         </referenceContainer>
         <referenceContainer name="left">
             <block class="Magento\Catalog\Block\Adminhtml\Category\Tree" name="category.tree" template="catalog/category/tree.phtml"/>
