MAGETWO-46877: [GITHUB] Cannot select product template for a configurable attribute
- isConfigurableProduct consider availability variations

--- a/app/code/Magento/ConfigurableProduct/view/adminhtml/templates/catalog/product/edit/super/config.phtml
+++ b/app/code/Magento/ConfigurableProduct/view/adminhtml/templates/catalog/product/edit/super/config.phtml
@@ -74,7 +74,7 @@
             "Magento_ConfigurableProduct/js/configurable-type-handler": {
                 "blockId": "#<?= /* @noEscape */ $block->getId()?>",
                 "tabId": "<?= /* @noEscape */ $block->getTabId()?>",
-                "hasVariations": "<?= /* @noEscape */ $block->isConfigurableProduct() ? 'true' : 'false' ?>"
+                "hasVariations": <?= /* @noEscape */ $block->isConfigurableProduct() ? 'true' : 'false' ?>
             }
         }
     }
