--- a/app/design/adminhtml/Magento/backend/Magento_Staging/web/css/source/module/_staging-preview.less
+++ b/app/design/adminhtml/Magento/backend/Magento_Staging/web/css/source/module/_staging-preview.less
@@ -276,6 +276,18 @@
     }
 }
 
+.staging-preview-item-segment {
+    .admin__field {
+        &:last-child {
+            margin-bottom: 0;
+        }
+    }
+
+    .admin__control-select {
+        min-width: 275px;
+    }
+}
+
 //
 //  Staging preview storefront iframe
 //  ---------------------------------------------
@@ -333,9 +345,9 @@
     //  Generic data grid
     .admin__data-grid-outer-wrap {
         border-top: 1px solid @staging-preview-table-dark__border-color;
-        max-height: 400px; // ToDO: Negotiate and determine if should be dynamic by JS.
+        max-height: 400px; // ToDO: remove after JS adjustment implemented
         overflow-y: auto;
-        padding: 15px 0 0;
+        padding: 15px @indent__s 0 0;
     }
 
     .data-grid {
