MAGETWO-46895: Category with 1 column layout has Layered Navigation UI broken
- Formatted acc Code-style 2

--- a/app/design/frontend/Magento/blank/Magento_LayeredNavigation/web/css/source/_module.less
+++ b/app/design/frontend/Magento/blank/Magento_LayeredNavigation/web/css/source/_module.less
@@ -34,10 +34,10 @@
 
         .filter-label {
             display: block;
-            font-weight: bold;
+            font-weight: @font-weight__bold;
 
             &:after {
-                content: ':'
+                content: ':';
             }
         }
 
