JS-323: Gallery setting for configurable product
- Static test fix

--- a/app/code/Magento/Catalog/view/frontend/templates/product/view/gallery.phtml
+++ b/app/code/Magento/Catalog/view/frontend/templates/product/view/gallery.phtml
@@ -21,7 +21,7 @@
     </div>
 </div>
 <!--Fix for jumping content. Loader must be the same size as gallery.-->
-<script type="text/javascript">
+<script>
     var config = {
             "width": <?php /* @escapeNotVerified */ echo $block->getImageAttribute('product_page_image_medium', 'width'); ?>,
             "thumbheight": <?php /* @escapeNotVerified */ echo $block->getImageAttribute('product_page_image_small', 'height')
