--- a/app/code/Magento/Paypal/view/adminhtml/templates/system/config/api_wizard.phtml
+++ b/app/code/Magento/Paypal/view/adminhtml/templates/system/config/api_wizard.phtml
@@ -28,7 +28,9 @@
 
         <a class="action-default"
            data-paypal-button="true"
-           href="<?php /* @noEscape */ echo $block->escapeUrl($block->getSandboxButtonUrl() . '?' . $block->getQuery()); ?>"
+           href="<?php
+               /* @noEscape */ echo $block->escapeUrl($block->getSandboxButtonUrl(). '?' . $block->getQuery());
+           ?>"
            target="PPFrame"><?php echo $block->escapeHtml($block->getSandboxButtonLabel()); ?></a>
     </div>
 </div>
