--- a/app/code/Magento/TestForm/view/adminhtml/web/template/robin.html
+++ b/app/code/Magento/TestForm/view/adminhtml/web/template/robin.html
@@ -1,1 +1,21 @@
-<div data-bind="html: content, css: contentSelector"></div>
+<!--
+/**
+ * Copyright © 2015 Magento. All rights reserved.
+ * See COPYING.txt for license details.
+ */
+-->
+
+<div data-bind="html: content,
+        attr: {
+            class: element.cssclass ? element.cssclass : 'admin__scope-old'
+        },
+        css: contentSelector" ></div>
+
+<!--ko if: showSpinner -->
+<div data-role="spinner" class="admin__data-grid-loading-mask" data-bind="visible: loading">
+    <div class="spinner">
+        <span></span><span></span><span></span><span></span>
+        <span></span><span></span><span></span><span></span>
+    </div>
+</div>
+<!-- /ko -->
